--- a/docs/cloudinit.adoc
+++ b/docs/cloudinit.adoc
@@ -2,7 +2,6 @@
 :idprefix:
 :idseparator: -
 :sectlinks:
-:sectnums:
 :toc: auto
 
 :uri-cloudinit: https://docs.oracle.com/en-us/iaas/Content/ContEng/Tasks/contengusingcustomcloudinitscripts.htm
@@ -11,41 +10,51 @@
 :uri-worker-script: link:{uri-repo}/modules/oke/cloudinit/worker.template.sh
 
 
-== Configuring Cloud-init scripts for Nodepools:
-Cloud-init scripts passed to the node pools can be provisioned in 2 different ways. Cloud-init scripts can be either executed for individual node pools or one common script which can be executed across all node pools.
+== Configuring cloud-init scripts for node pools:
+There are 2 types of cloud-init scripts that can be configured for node pools:
 
-The precedence of execution is if a custom script for the node pool is specified (`cloudinit_nodepool`), it will be executed. If it is not provided, then the `cloudinit_nodepool_common` script will be executed. Else the default `worker.template.sh` will be executed incase both are not provided.
+. Common: these are cloud-init scripts that are common to all node pools
+. Node pool specific: these are cloud-init scripts that are specific to particular node pools.
 
-This is how user_data is setup.
+=== Default cloud-init
+
+By default, the {uri-worker-script}[worker template] is used. The default worker template runs `oci-growfs` and `timedatectl` to configure the boot volume size and timezone respectively. 
+
+=== Script precedence
+
+If no value is configured for `cloudinit_nodepool_common` or for `cloudinit_nodepool`, this default template is used.
+
+If a value is configured for `cloudinit_nodepool_common`, then this value is used instead. 
+
+If a value is configured for `cloudinit_nodepool`, then this value is used for the specific nodepool only instead. Other nodepools will utilize whatever script is common.
+
+The flowchart below depicts the script selection workflow:
+
+.cloud-init script selection
+image::images/cloud-init-flowchart.png[align="cloud-init script selection"]
+
+
+== Overriding default cloud-init
+
+=== Overriding the common cloud-init
+
+The common cloud-init script for all node pools can be overriden as follows:
+
+```
+cloudinit_nodepool_common = "/tmp/commoncloudinit.sh"
+```
+
+=== Specifying a cloud-init script for specific node pools
+
+Sometimes, it may be desirable to configure additional settings for specific node pools without affecting the behaviour of existing or other node pools. In this case, you can override cloud-init as follows:
+
 ----
-user_data = var.cloudinit_nodepool_common == "" && lookup(var.cloudinit_nodepool, each.key, null) == null ? data.cloudinit_config.worker.rendered : lookup(var.cloudinit_nodepool, each.key, null) != null ? filebase64(lookup(var.cloudinit_nodepool, each.key, null)) : filebase64(var.cloudinit_nodepool_common)
+cloudinit_nodepool        = {
+  np1 = "/tmp/np1cloudinit.sh"
+  np3 = "/tmp/np3cloudinit.sh"
+}
 ----
 
-If the _cloudinit_nodepool_common_ and _cloudinit_nodepool_ is not available, then the common script which is placed by the repo at the location {uri-worker-script}[worker.template.sh] will be executed. In case if _cloudinit_nodepool_ specific script is available, then it will be executed else the _cloudinit_nodepool_common_ script will be executed.
+In the above example, node pool `np1` and `np3` will use `/tmp/np1cloudinit.sh` and `/tmp/np3cloudinit.sh` respectively for their cloud-init. 
 
-=== *Using `cloudinit_nodepool_common`*: 
-When a script is passed to the cloudinit_nodepool_common, this init doc is executed in all the node pools. +
-Example:
-----
- { 
-    cloudinit_nodepool_common = "/tmp/common_nodepool_script.sh"
- }
-----
-
-In this example, the script _common_nodepool_script.sh_ present in /tmp will be executed across all the node pools. This key will be useful when something commonly has to be run across all the nodepools. For example installing a setting timezone in all node pools. 
-
-The common script which is by default installed is {uri-worker-script}[_worker.template.sh_].
-
-=== *Using `cloudinit_nodepool`*: 
-When custom scripts for each node pool is required to be executed, _cloudinit_nodepool_ can be used. It takes a map of values where each key is the node pool name. +
-Example: 
-
-----
- { 
-    cloudinit_nodepool = {
-        np1 = "/tmp/np1/cloudinit1.sh" # script to be executed in nodepool 1
-        np2 = "/tmp/np3/cloudinit2.sh" # script to be executed in nodepool 2  
-    }
- }
-----
-In this example, the script _cloudinit1.sh_ will be executed in node pool 1 and _cloudinit2.sh_ will be executed in node pool 2. This key will be useful when each nodepool has to be have some nodepool scripts to be executed. For example installing certaining packages in certain nodepools. 
+NOTE: You must ensure that the node pool name specified for cloud-init matches those you defined in the `node_pools` variable. 
