--- a/docs/terraformoptions.adoc
+++ b/docs/terraformoptions.adoc
@@ -758,15 +758,20 @@ EOT
 |31
 
 |node_pools
-|The number, shape of node pools and node_pool_size to create. Each key and tuple pair corresponds to 1 node pool.
+|The number, shape of node pool, node_pool_size to create. Use this input variable to also set other nodepool parameters. See terraform.tfvars.example. Each key and tuple pair corresponds to 1 node pool that will be created. 
 
 Refer to {uri-topology}[topology] for more thorough examples.
 |e.g.
 
 node_pools = {
-np1 = { shape = "VM.Standard.E4.Flex", ocpus = 1, memory = 16, node_pool_size = 1, boot_volume_size = 150, label = { app = "frontend", pool = "np1" } }
-  np2 = {shape="VM.Standard.E2.2",node_pool_size=2,boot_volume_size=150,label={app="application",name="test"}}
-  np3 = {shape="VM.Standard.E2.2",node_pool_size=1,placement_ads=[1]} 
+  # Basic node pool
+  np1 = {
+    shape            = "VM.Standard.E4.Flex",
+    ocpus            = 2,
+    memory           = 32,
+    node_pool_size   = 1,
+    boot_volume_size = 150,
+  } 
 } 
 |{}
 
