--- a/docs/codingconventions.adoc
+++ b/docs/codingconventions.adoc
@@ -98,17 +98,22 @@ variable "xyz" {
   type: string
 ----
 
-When defining variables:
+Variables exposed by the root module:
 
-. the type should always be specified. We prefer:
-.. string
-.. boolean
-.. number
-.. collection (list, set, map, tuples) of the above
-. if you specify a default value, it should:
-.. reflect a sensible default
-.. match the type specified
-.. be reflected in terraform.tfvars.example
+* must be included with its default value in the approriate tfvars example file.
+* must define a default value that matches its type and will not alter existing behavior of the module.
+* must define a description that describes how changes to the value will impact resources and interact with other variables when applicable.
+* should be prefixed with the name of the component they pertain to unless shared across more than one, e.g. `worker_`, `operator_`, etc.
+* should use imperative verbs when controlling behavior, e.g. `create`, `use`, etc.
+* should include preconditions for input validation where possible.
+* should prefer `null` for empty/unset defaults over empty string or other values.
+
+Variables within submodules:
+
+* must define only a type matching that of the root module.
+* must omit defaults to ensure they are referenced from the root module.
+* must omit descriptions to avoid maintaining in multiple places.
+* should match the name of their root module counterparts, with the possible exception of a component prefix when redundant and unambiguous, e.g. `worker_`, `operator_`, etc.
 
 Do not hesitate to insert a brief comment in the variable block if it helps to clarify your intention.
 
